logs/pennyblack.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pennyblack'...
Listing './lib/python3.5/site-packages/pennyblack/content'...
Compiling './lib/python3.5/site-packages/pennyblack/content/richtext.py'...
***   File "./lib/python3.5/site-packages/pennyblack/content/richtext.py", line 26
    except TemplateSyntaxError, e:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pennyblack/locale'...
Listing './lib/python3.5/site-packages/pennyblack/locale/de'...
Listing './lib/python3.5/site-packages/pennyblack/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pennyblack/locale/en'...
Listing './lib/python3.5/site-packages/pennyblack/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pennyblack/management'...
Listing './lib/python3.5/site-packages/pennyblack/management/commands'...
Compiling './lib/python3.5/site-packages/pennyblack/management/commands/sendmail.py'...
***   File "./lib/python3.5/site-packages/pennyblack/management/commands/sendmail.py", line 13
    print str(job)+ ' sent'
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pennyblack/models'...
Compiling './lib/python3.5/site-packages/pennyblack/models/sender.py'...
***   File "./lib/python3.5/site-packages/pennyblack/models/sender.py", line 98
    except imaplib.IMAP4.error, e:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pennyblack/module'...
Listing './lib/python3.5/site-packages/pennyblack/module/subscriber'...
Listing './lib/python3.5/site-packages/pennyblack/module/subscriber/fixtures'...
Listing './lib/python3.5/site-packages/pennyblack/static'...
Listing './lib/python3.5/site-packages/pennyblack/static/pennyblack'...
Listing './lib/python3.5/site-packages/pennyblack/templates'...
Listing './lib/python3.5/site-packages/pennyblack/templates/admin'...
Listing './lib/python3.5/site-packages/pennyblack/templates/admin/feincms'...
Listing './lib/python3.5/site-packages/pennyblack/templates/admin/feincms/pennyblack'...
Listing './lib/python3.5/site-packages/pennyblack/templates/admin/feincms/pennyblack/newsletter'...
Listing './lib/python3.5/site-packages/pennyblack/templates/admin/pennyblack'...
Listing './lib/python3.5/site-packages/pennyblack/templates/admin/pennyblack/job'...
Listing './lib/python3.5/site-packages/pennyblack/templates/admin/pennyblack/jobstatistic'...
Listing './lib/python3.5/site-packages/pennyblack/templates/admin/pennyblack/jobunit'...
Listing './lib/python3.5/site-packages/pennyblack/templates/admin/pennyblack/tiny_mce'...
Listing './lib/python3.5/site-packages/pennyblack/templates/content'...
Listing './lib/python3.5/site-packages/pennyblack/templates/content/gallery'...
Listing './lib/python3.5/site-packages/pennyblack/templates/content/image'...
Listing './lib/python3.5/site-packages/pennyblack/templates/content/text_and_image'...
Listing './lib/python3.5/site-packages/pennyblack/templates/content/text_only'...
Listing './lib/python3.5/site-packages/pennyblack/templates/pennyblack'...
Listing './lib/python3.5/site-packages/pennyblack/templates/pennyblack/subscriber'...
Listing './lib/python3.5/site-packages/pennyblack/templatetags'...
Listing './lib/python3.5/site-packages/pennyblack-0.3.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
